--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,14 @@
         ".\\rust-serial\\Cargo.toml",
         ".\\rust-serial\\Cargo.toml"
     ],
-    "cmake.sourceDirectory": "G:/development/ddf/ddfapp/windows"
+    "cmake.sourceDirectory": "G:/development/ddf/ddfapp/windows",
+    "dart.flutterSdkPath": ".fvm/flutter_sdk",
+    // Remove .fvm files from search
+    "search.exclude": {
+        "**/.fvm": true
+    },
+    // Remove from file watching
+    "files.watcherExclude": {
+        "**/.fvm": true
+    },
 }
