--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\Administrator\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=/Users/jibi/Library/Android/sdk
+flutter.sdk=/Users/jibi/fvm/versions/3.16.8
