--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,14 @@ dependencies:
   ffi: ^2.0.2
   flutter_rust_bridge: ^1.78.0
   path: ^1.8.3
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.7
+  equatable: ^2.0.5
+  provider: ^6.1.1
+  uuid: ^4.3.3
+  flutter_svg: ^2.0.9
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
@@ -60,18 +68,26 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/dlls/
+    - assets/fonts/
+    - assets/icons/
+    - assets/images/
+    - assets/programs/
+
   fonts:
     - family: Segoe
       fonts:
-        - asset: lib/assets/fonts/Segoe-UI.ttf
-        - asset: lib/assets/fonts/Segoe-UI-Bold.ttf
-        - asset: lib/assets/fonts/Segoe-UI-Italic.ttf
-        - asset: lib/assets/fonts/Segoe-UI-Bold-Italic.ttf
-  # To add assets to your application, add an assets section, like this:
-  assets:
-    - lib/assets/
-    - lib/assets/sern.dll
-    # - lib/assets/programs/
+        - asset: assets/fonts/Segoe-UI.ttf
+          weight: 400
+        - asset: assets/fonts/Segoe-UI-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Segoe-UI-Italic.ttf
+          weight: 400
+          style: italic
+        - asset: assets/fonts/Segoe-UI-Bold-Italic.ttf
+          weight: 700
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
