--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   uuid: ^4.3.3
   flutter_svg: ^2.0.9
   dartz: ^0.10.1
+  stream_transform: ^2.1.0
+  shared_preferences: ^2.2.2
+  localstore: ^1.3.5
 
 dev_dependencies:
   flutter_test:
