--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
 sdk.dir=/Users/jibi/Library/Android/sdk
 flutter.sdk=/Users/jibi/fvm/versions/3.16.8
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
