--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   shared_preferences: ^2.2.2
   localstore: ^1.3.5
   flutter_libserialport: ^0.3.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
