fix bug send TPS

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,1 @@
-sdk.dir=/Users/jibi/Library/Android/sdk
-flutter.sdk=/Users/jibi/fvm/versions/3.16.8
-flutter.buildMode=debug
-flutter.versionName=1.0.0
-flutter.versionCode=1
+flutter.sdk=C:\\src\\flutter
